--- a/Python/CyCSS.css
+++ b/Python/CyCSS.css
@@ -1,3 +1,13 @@
+/*
+  CyKITv2 
+  CyCSS.css 2017.12.23
+  ============================
+  Written by Warren
+  
+  CSS for CyKITv2.html & CyInterface.js
+
+*/
+
 .tooltip {
     position: relative;
     display: inline-block;
